--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -22,6 +22,17 @@
   }
 }
 
+// Mixin for box-shadow v2
+
+@mixin BoxShadowHelper2($level) {
+  @if $level == 1 {
+    box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  }
+  @else if $level == 2 {
+    box-shadow: 0 20px 40px rgba(0,0,0,.2);
+  }
+}
+
  // Mixin for retina display media query
 
 @mixin retina {
