Rem function renamed to remy.

--- a/src/_functions.scss
+++ b/src/_functions.scss
@@ -4,6 +4,6 @@
 
 // Px to rem
 
-@function rem($target) {
+@function remy($target) {
   @return ($target / 16px) * 1rem;// HTML font-size is set to 16px
 }
