--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -59,7 +59,7 @@
 
 // Mixin for transition
 
-@mixin transition($prop, $duration: .25s, $timing: cubic-bezier(.4,0,1,1)) {
+@mixin transition($prop: all, $duration: .25s, $timing: cubic-bezier(.4,0,1,1)) {
   transition: $prop $duration $timing;
 }
 
