--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -23,7 +23,6 @@
 }
 
 // Mixin for box-shadow v2
-
 @mixin BoxShadowHelper2($level) {
   @if $level == 1 {
     box-shadow: 0 1px 2px rgba(0,0,0,.15);
@@ -40,6 +39,16 @@
   }
   @else if level == 2 {
     box-shadow: 0 18px 35px rgba(50,50,93,.1),0 8px 15px rgba(0,0,0,.07);
+  }
+}
+
+// Mixin for box-shadow used on facebook.design
+@mixin boxShadowFacebookDesign($level) {
+  @if $level == 1 {
+    box-shadow: 0 20px 20px rgba(0,0,0,.08);
+  }
+  @else if level == 2 {
+    box-shadow: 0 40px 40px rgba(0,0,0,.16)
   }
 }
 
