--- a/src/_box-shadows.scss
+++ b/src/_box-shadows.scss
@@ -3,7 +3,7 @@
 //
 
 // Material box-shadow
-@mixin BoxShadowHelper($level) {
+@mixin box-shadow-helper($level) {
   @if $level == 1 {
     box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
   }
@@ -22,7 +22,7 @@
 }
 
 // Material box-shadow v2
-@mixin BoxShadowHelper2($level) {
+@mixin box-shadow-helper-two($level) {
   @if $level == 1 {
     box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
   }
@@ -32,7 +32,7 @@
 }
 
 // Box-shadow used on stripe.com
-@mixin boxShadowStripe($level) {
+@mixin box-shadow-stripe($level) {
   @if $level == 1 {
     box-shadow: 0 15px 35px rgba(50, 50, 93, .1),0 5px 15px rgba(0, 0, 0, .07);
   }
@@ -42,11 +42,11 @@
 }
 
 // Box-shadow used on facebook.design
-@mixin boxShadowFacebookDesign($level) {
+@mixin box-shadow-facebookdesign($level) {
   @if $level == 1 {
     box-shadow: 0 20px 20px rgba(0, 0, 0, .08);
   }
-  @else if level == 2 {
+  @else if $level == 2 {
     box-shadow: 0 40px 40px rgba(0, 0, 0, .16);
   }
 }
