--- a/src/_box-shadows-mixins.scss
+++ b/src/_box-shadows-mixins.scss
@@ -50,3 +50,18 @@
     box-shadow: 0 40px 40px rgba(0, 0, 0, .16);
   }
 }
+
+// Box-shadow used on tailwindcss.com
+@mixin box-shadow-tailwindcss($level) {
+  @if $level == 1 {
+    box-shadow: 0 2px 4px 0 rgba(0 ,0 ,0 , .1);
+  }
+
+  @if $level == 2 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .12), 0 2px 4px 0 rgba(0, 0, 0, .08);
+  }
+
+  @if $level == 3 {
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
+  }
+}
