--- a/src/sass/_cubic-beziers.scss
+++ b/src/sass/_cubic-beziers.scss
@@ -1,6 +1,4 @@
-//
 // Cubic bezier functions
-//
 
 // source: http://www.brianlovin.com/
-$cubic-1: cubic-bezier(.77,0,.175,1);
+$cubic-1: cubic-bezier(.77, 0, .175, 1);
