--- a/src/sass/_box-shadows-mixins.scss
+++ b/src/sass/_box-shadows-mixins.scss
@@ -54,3 +54,12 @@
     box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
   }
 }
+
+// Box-shadow used supernova
+@mixin box-shadow-supernova($level) {
+  @if $level == 1 {
+    box-shadow: 0 5px 10px rgba(0, 0, 77, .16);
+  } @if $level == 2 {
+    box-shadow: 0 15px 10px rgba(0, 0, 77, .16);
+  }
+}
